Avances preferencias en proyecto

--- a/Bread4All/app/src/main/res/values-en/strings.xml
+++ b/Bread4All/app/src/main/res/values-en/strings.xml
@@ -22,4 +22,6 @@
     <string name="navigation_drawer_close">Close</string>
     <string name="title_pgweb">Website</string>
     <string name="title_preferencias">Preferences</string>
+    <string name="Moneda">Currency</string>
+    <string name="titulo_moneda">Your current currency</string>
 </resources>
