--- a/Bread4All/app/src/main/res/values-en/strings.xml
+++ b/Bread4All/app/src/main/res/values-en/strings.xml
@@ -24,4 +24,8 @@
     <string name="title_preferencias">Preferences</string>
     <string name="Moneda">Currency</string>
     <string name="titulo_moneda">Your current currency</string>
+    <string name="Saldo_base">Money: 24</string>
+    <string name="Apariencia">Apparance</string>
+    <string name="Modo_oscuro">Dark mode</string>
+    <string name="ProductoTop">The best product</string>
 </resources>
