--- a/Bread4All/app/src/main/res/values/strings.xml
+++ b/Bread4All/app/src/main/res/values/strings.xml
@@ -23,19 +23,14 @@
     <string name="title_preferencias">Preferencias</string>
 
     <!-- Preference Titles -->
-    <string name="messages_header">Messages</string>
-    <string name="sync_header">Sync</string>
 
     <!-- Messages Preferences -->
-    <string name="signature_title">Your signature</string>
-    <string name="reply_title">Default reply action</string>
 
     <!-- Sync Preferences -->
-    <string name="sync_title">Sync email periodically</string>
-    <string name="attachment_title">Download incoming attachments</string>
-    <string name="attachment_summary_on">Automatically download attachments for incoming emails
-    </string>
-    <string name="attachment_summary_off">Only download attachments when manually requested</string>
     <string name="Moneda">Moneda</string>
     <string name="titulo_moneda">Tu moneda actual</string>
+    <string name="Saldo_base">Saldo: 24</string>
+    <string name="Apariencia">Apariencia</string>
+    <string name="Modo_oscuro">Modo oscuro</string>
+    <string name="ProductoTop">El mejor producto</string>
 </resources>
