--- a/Bread4All/app/src/main/res/values/strings.xml
+++ b/Bread4All/app/src/main/res/values/strings.xml
@@ -33,4 +33,5 @@
     <string name="Apariencia">Apariencia</string>
     <string name="Modo_oscuro">Modo oscuro</string>
     <string name="ProductoTop">El mejor producto</string>
+    <string name="SMS">SMS</string>
 </resources>
