--- a/Bread4All/app/src/main/res/values-en/strings.xml
+++ b/Bread4All/app/src/main/res/values-en/strings.xml
@@ -28,4 +28,5 @@
     <string name="Apariencia">Apparance</string>
     <string name="Modo_oscuro">Dark mode</string>
     <string name="ProductoTop">The best product</string>
+    <string name="SMS">SMS</string>
 </resources>
