--- a/Bread4All/app/src/main/res/values-en/strings.xml
+++ b/Bread4All/app/src/main/res/values-en/strings.xml
@@ -29,4 +29,5 @@
     <string name="Modo_oscuro">Dark mode</string>
     <string name="ProductoTop">The best product</string>
     <string name="SMS">SMS</string>
+    <string name="Añadir">Add</string>
 </resources>
