--- a/Bread4All/app/src/main/res/values/strings.xml
+++ b/Bread4All/app/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
     <string name="Modo_oscuro">Modo oscuro</string>
     <string name="ProductoTop">El mejor producto</string>
     <string name="SMS">SMS</string>
+    <string name="Añadir">Añadir</string>
 </resources>
