--- a/Bread4All/app/src/main/res/values/strings.xml
+++ b/Bread4All/app/src/main/res/values/strings.xml
@@ -35,4 +35,7 @@
     <string name="ProductoTop">El mejor producto</string>
     <string name="SMS">SMS</string>
     <string name="Añadir">Añadir</string>
+    <string name="opinion">Segun nuestra opinion</string>
+    <string name="Salir">Salir</string>
+    <string name="Notificacion">Crear aviso</string>
 </resources>
