--- a/Bread4All/app/src/main/res/values/strings.xml
+++ b/Bread4All/app/src/main/res/values/strings.xml
@@ -48,4 +48,12 @@
     <string name="Subir_video">Subir video</string>
     <string name="Tomar_foto">Tomar foto</string>
     <string name="Grabar_video">Grabar video</string>
+    <string name="Descripcion">Descripción</string>
+    <string name="Opinion">Segun nuestra opinion</string>
+    <string name="Duda">Duda</string>
+    <string name="Introduzca">Introduzca su duda</string>
+    <string name="Entrada">Entrada</string>
+    <string name="Salida">Salida</string>
+    <string name="Perdida">Perdida</string>
+    <string name="Trabajando">Estamos trabajando en aumentar el saldo</string>
 </resources>
