Añadido keys y mapas

--- a/Bread4All/app/src/main/res/values-en/strings.xml
+++ b/Bread4All/app/src/main/res/values-en/strings.xml
@@ -59,4 +59,5 @@
     <string name="notificacion">Buy youre bread later</string>
     <string name="subido">Comment uploaded</string>
     <string name="deshacer">Undo</string>
+    <string name="mapa">Map</string>
 </resources>
