Falta dibujar ruta

--- a/Bread4All/app/src/main/res/values-en/strings.xml
+++ b/Bread4All/app/src/main/res/values-en/strings.xml
@@ -60,4 +60,6 @@
     <string name="subido">Comment uploaded</string>
     <string name="deshacer">Undo</string>
     <string name="mapa">Map</string>
+    <string name="localizar">Locate</string>
+    <string name="hibrido">Hybrid mode</string>
 </resources>
